// This file currently exists to prevent circular dependencies when extracting
// PLT functionality into its own package. The file name `kernel` is choosen
// in anticipation of more core definitions operating at the module/core
// intersection to follow.

syntax = "proto3";

package concordium.v2;

// This specifies the package we want to use for our generated Go code.
// Has no effect on code generated on other languages.
option go_package = "./pb";

// This specifies the package we want to use for our generated Java classes.
// Has no effect on code generated on other languages.
option java_package = "com.concordium.grpc.v2";

// This specifies that separate .java files will be generated for each of the Java classes/enums/etc. generated for the top-level messages, services, and enumerations,
// and the wrapper Java class generated for this .proto file won't contain any nested classes/enums/etc.
// If not generating Java code, this option has no effect.
option java_multiple_files = true;

// This specifies the package we want to use for our generated C# classes.
// Has no effect on code generated on other languages.
option csharp_namespace = "Concordium.Grpc.V2";

// An address of an account. Always 32 bytes.
message AccountAddress {
  bytes value = 1;
}

// A memo which can be included as part of a transfer. Max size is 256 bytes.
// This message can occur starting from protocol version 2.
message Memo {
  bytes value = 1;
}
